<resources>
    <string name="app_name">Bin Test</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bank_info">info</string>
    <string name="search_button">Search</string>
    <string name="bank_info_label">Bank info:</string>
    <string name="coordinates_label">Coordinates:</string>
    <string name="coordinstes_field">0.0.0.0</string>
    <string name="country_label">Country:</string>
    <string name="country_field">country</string>
    <string name="bin_edit_text">Bin</string>
    <string name="type_label">Type:</string>
    <string name="type_field">visa</string>
    <string name="url_field">Url: %s</string>
    <string name="number_field">Phone: %s</string>
    <string name="history_button">Watch history</string>
    <string name="city_field">City: %s</string>
</resources>